--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,11 @@
   <meta name="viewport" content="width=device-width">
 
   <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-
-
-
-  <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
 </head>
 <body>
     <div class="header">
-        <div class="logo"></div>
+        <!-- <div class="logo"></div> -->
+        <%= link_to image_tag("GA_logo.png", :class => "logo" ), events_path%>
         <%= link_to "GENERAL ASSEMBLY", events_path, { :class => "header-text"}%>
     </div>
 
