--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,10 +26,11 @@
                 </div>
             </div>
         </div>
-    </div>
+
     <div class="button-wrapper">
         <div class="button-holder">
-            <div class="graph-button pie icon">Pie Graph</div>
+            <%= image_tag ("pie_chart_icon.png"), :class => "graph-button pie" %>
+            <!-- <div class="graph-button pie icon">Pie Graph</div> -->
         </div>
         <div class="button-holder">
             <div class="graph-button column icon">Column Graph</div>
@@ -38,13 +39,13 @@
             <div id="showComments" class="icon"><h4>Student Comments</h4></div>
         </div>
     </div>
-
+</div>
     <div class="statistics">
       <p>Number of responses: <%= @responses.count %></p>
       <p>Average Comfort: <%= @responses.average(:comfort_score) %></p>
       <p>Average Completeness: <%= @responses.average(:completeness_score) %></p>
     </div>
-    
+
     <div class="comments-list list-box">
          <% @event.responses.each do |response| %>
             <div class="comment lesson-listing">
