devise links added, need to fix DELETE route for devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,10 @@
         <div class="logo"></div>
         <%= link_to "GENERAL ASSEMBLY", events_path, { :class => "header-text"}%>
     </div>
+  <ul class="hmenu">
+    <%= render 'devise/menu/registration_items' %>
+    <%= render 'devise/menu/login_items' %>
+  </ul>
 
 <%= yield %>
 
