--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -567,3 +567,28 @@ input[type="text"], textarea {
         width: 375px;
     }
 }
+
+.hmenu {
+  // margin-top: 4em;
+  // z-index: 1;
+  float: right;
+
+}
+
+.hmenu a {
+  z-index: 1;
+  color: white;
+  text-decoration: none;
+  position: relative;
+}
+
+ul.hmenu {
+  list-style: none;
+  margin: 0 0 2em;
+  padding: 0;
+  // z-index: 2;
+}
+
+ul.hmenu li {
+  // display: inline;
+}
