--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -35,9 +35,6 @@
         <div class="button-holder">
             <div class="graph-button column icon">Column Graph</div>
         </div>
-        <div class="button-holder">
-            <div id="showComments" class="icon"><h4>Student Comments</h4></div>
-        </div>
     </div>
 </div>
     <div class="statistics">
@@ -45,7 +42,9 @@
       <p>Average Comfort: <%= @responses.average(:comfort_score) %></p>
       <p>Average Completeness: <%= @responses.average(:completeness_score) %></p>
     </div>
-
+    <div class="button-holder full">
+        <div id="showComments" class="icon"><h4>Student Comments</h4></div>
+    </div>
     <div class="comments-list list-box">
          <% @event.responses.each do |response| %>
             <div class="comment lesson-listing">
