updated report page

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -33,7 +33,8 @@
             <!-- <div class="graph-button pie icon">Pie Graph</div> -->
         </div>
         <div class="button-holder">
-            <div class="graph-button column icon">Column Graph</div>
+            <%= image_tag ("stats.png"), :class => "graph-button column" %>
+            <!-- <div class="graph-button column icon">Column Graph</div> -->
         </div>
     </div>
 </div>
