--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -40,11 +40,9 @@
     </div>
 
     <div class="statistics">
-      <p>Number of responses: <%= @responses.count %></p>
-      <p>Average Comfort: <%= @responses.average(:comfort_score) %></p>
-      <p>Average Completeness: <%= @responses.average(:completeness_score) %></p>
+      <p>Number of responses: <%= @responses.count %> Average Comfort: <%= @responses.average(:comfort_score) %> Average Completeness: <%= @responses.average(:completeness_score) %></p>
     </div>
-    
+
     <div class="comments-list list-box">
          <% @event.responses.each do |response| %>
             <div class="comment lesson-listing">
