--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -572,7 +572,7 @@ input[type="text"], textarea {
   // margin-top: 4em;
   // z-index: 1;
   float: right;
-
+  color: white;
 }
 
 .hmenu a {
@@ -583,12 +583,16 @@ input[type="text"], textarea {
 }
 
 ul.hmenu {
+
+  text-align:right;
   list-style: none;
   margin: 0 0 2em;
-  padding: 0;
-  // z-index: 2;
+  padding-top: 1em;
+  z-index: 1;
 }
 
 ul.hmenu li {
-  // display: inline;
+  z-index: 1;
+  color: white;
+  position: relative;
 }
