--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,5 +1,8 @@
 <% if user_signed_in? %>
   <li>
+    Signed in as <%= current_user.email %>
+  </li>
+  <li>
   <%= link_to('Edit Account', edit_user_registration_path) %>
   </li>
 <% else %>
