--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -576,6 +576,7 @@ input[type="text"], textarea {
 }
 
 .statistics p {
-  float: left;
-  display: inline;
+  text-align: center;
+  display: block;
+  font-weight: bold;
 }
