--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -601,11 +601,9 @@ input[type="text"], textarea {
 }
 
 ul.hmenu {
-
-  text-align:right;
   list-style: none;
   margin: 0 0 2em;
-  padding-top: 1em;
+  padding: 1em 5em 0 0 ;
   z-index: 1;
 }
 
@@ -613,7 +611,7 @@ ul.hmenu li {
   z-index: 1;
   color: white;
   position: relative;
-  text-align: center;
+  text-align:right;
   display: block;
   font-weight: bold;
 }
