--- a/app/views/responses/new.html.erb
+++ b/app/views/responses/new.html.erb
@@ -67,7 +67,7 @@
                 <%= f.text_field :name %>
             </div>
             <div class="response-submit-button">
-                <%= f.submit 'SUBMIT' %>
+                <%= f.submit 'SUBMIT', :class =>"response-button" %>
             </div>
 
         <% end %>
