--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+  <%= favicon_link_tag 'GA_logo.png' %>
 </head>
 <body>
     <div class="header">
